allow click on popup

--- a/styles.css
+++ b/styles.css
@@ -257,3 +257,6 @@ background-color: #ccc;
 .existingBrick:hover .popupText {
     display: block;
   }
+.existingBrick:hover {
+    cursor: pointer;
+}
