--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,59 @@
+:root {
+    --brick-red: #dd7e6b;
+    --noise: url("asfalt-dark.png");
+}
+
 body {
     margin: 0;
 }
 
 /* HEADING */
 header {
+    padding: 0 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     background-color: lightblue;
 }
-a {
+.headerButton {
+    background-color: unset;
     border: black solid 2px;
     border-radius: 4px;
-    padding: 5px 0;
+    padding: 5px;
     text-align: center;
-    width: 100px;
+    width: fit-content;
 }
-#accessibilityButton {
-    width: 104px;
+.headerButton:hover {
+    background-color: var(--brick-red);
+    cursor: pointer;
 }
 
 /* SEARCH */
 
+#displayToggle {
+    margin: 15px auto 0;
+}
+
+@media (max-width: 1000px) {
+    #displayToggle {
+        display: none;
+    }
+}
+
 #searchHeader {
+    width: fit-content;
     position: relative;
-    margin: 20px 0;
+    margin: 0 auto 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: start;
     justify-content: center;
     gap: 10px;
 }
 
 #keysContainer {
-    padding-top: 5px;
+    padding-top: 2px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -48,65 +67,93 @@ a {
     width: 40px;
     height: 20px;
     border: black solid 2px;
+    background-image: var(--noise);
 }
 #redKeyBox {
-    background-color: #dd7e6bff;
+    background-color: var(--brick-red);
 }
 #greyKeyBox {
     background-color: lightgrey;
+}
+#clearSearch {
+    background-color: #ea9f94;
+    width: fit-content;
+}
+#customizeButtons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
     /* DROP DROWN */
         /* https://www.w3schools.com/howto/howto_js_accordion.asp */
 
 .accordion {
-    border-radius: 8px;
-    border: black solid 2px;
+    background-color: unset;
+    border-radius: 3px;
     cursor: pointer;
-    padding: 5px;
     text-align: left;
-    outline: none;
     font-size: 15px;
     transition: 0.4s;
 }
   
 .active, .accordion:hover, .accordion:focus {
-background-color: #ccc; 
+    background-color: var(--brick-red); 
 }
 .searchDropdown {
     position: absolute;
-    top: 40px;
-    right: 0;
-    width: 80%;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 800px;
     height: 0;
     overflow: hidden;
     padding: 5px 15px;
     margin: auto;
     transition: all 0.4s ease-out;
 }
+.searchDropdown::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: grey transparent transparent transparent;
+}
 
 #searchContainer {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     gap: 20px;
     margin: 10px auto;
     width: fit-content;
+    max-width: 90vw;
     background-color: lightgrey;
     padding: 15px;
 }
 #sectionSearchContainer {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     text-align: center;
+}
+#sectionSearchContainer > span {
+    width: 100%;
+    text-align: left;
 }
 #sectionSearchButtons {
     margin-top: 5px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 15px;
 }
 #submitSearch {
     margin-left: 5px;
+    margin-top: 5px;
 }
 #nameSearchContainer {
     justify-content: center;
@@ -115,15 +162,40 @@ background-color: #ccc;
 }
 
 /* SELECTED BRICK */
-#selectedBrickContainer {
+#selectedBrickPageCover {
+    width: 100vw;
+    height: 100vh;
     position: fixed;
-    top: 200px;
+    display: none;
+    top: 0;
+    left: 0;
+    background-color: #bbbbbbcc;
+    z-index: 4;
+}
+#selectedBrickContainer {
+    background-color: #ddd;
+    border: black solid 2px;
+    position: fixed;
+    z-index: 1;
+    top: 100px;
     left: 50%;
     transform: translateX(-50%);
-    width: 500px;
-    height: 300px;
-    background-color: brown;
-    visibility: hidden;
+    padding: 20px 50px;
+}
+#selectedBrick {
+    margin-top: 10px;
+    width: 400px;
+    height: 200px;
+    background-color: var(--brick-red);
+    background-image: var(--noise);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
+#selectedCloseButton {
+    background-color: var(--brick-red);
 }
 
 /* SCROLLABLE */
@@ -160,7 +232,7 @@ background-color: #ccc;
 
 #scrollContainer {
     padding: 10px 20px;
-    border: #dd7e6bff solid 10px;
+    border: var(--brick-red) solid 10px;
     margin: 0 auto;
     height: 560px;
     width: 90vw;
@@ -196,7 +268,8 @@ background-color: #ccc;
 }
 
 .brick {
-    background-color: #d9d9d9ff;
+    background-image: var(--noise);
+    background-color: #d9d9d9;
     margin-right: -2px;
     display: inline-block;
     border: 2px solid black;
@@ -205,12 +278,14 @@ background-color: #ccc;
 }
 
 .existingBrick {
-    background-color: #dd7e6bff;
+    background-color: var(--brick-red);
     position: relative;
+    z-index: 3;
 }
 
-.selectedBrick {
+.clickedBrick {
     background-color: red;
+    z-index: 5 !important;
 }
 
 /* Popup */
@@ -237,7 +312,6 @@ background-color: #ccc;
     left: 100%;
     transform: translateX(-100%);
 }
-
 .popupText::after {
     content: "";
     position: absolute;
@@ -270,14 +344,32 @@ background-color: #ccc;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
 }
-.accessibleBrick {
-    width: 400px;
+.accessibleBrickContainer {
     max-width: 90vw;
     padding: 10px;
-    background-color: #dd7e6b;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.accessibleBrickContainer > p {
+    margin: 0 0 0 10px;
+}
+.accessibleBrick {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+    max-width: 90vw;
+    height: 100px;
+    background-color: var(--brick-red);
+    background-image: var(--noise);
     color: white;
+}
+.accessibleBrick > p {
+    margin: 0;
+    font-size: 1.3em;
 }
 #staticSearchLabel {
     text-align: center;
