--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,27 @@
 
 body {
     margin: 0;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 1.2em;
+    font-weight: 400;
+}
+button {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1em;
+}
+input {
+    font-size: 1.2em;
 }
 
 /* HEADING */
 header {
-    padding: 0 10px;
+    padding: 0 60px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: start;
     align-items: center;
     background-color: lightblue;
+    gap: 20px;
 }
 .headerButton {
     background-color: unset;
@@ -23,6 +34,8 @@ header {
     padding: 5px;
     text-align: center;
     width: fit-content;
+    color: black;
+    text-decoration: none;
 }
 .headerButton:hover {
     background-color: var(--brick-red);
