--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,39 @@ header {
 .panel {
     margin-right: 36px;
 }
+.panel:hover {
+    cursor: zoom-in;
+}
+#zoomImgContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    background-color: #000000AA;
+    z-index: 30;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: scroll;
+}
+#zoomImg {
+    width: auto;
+    overflow: scroll;
+    
+}
+#img-magnifier-glass {
+    background-repeat: no-repeat;
+    position: absolute;
+    border: 3px solid #000;
+    border-radius: 50%;
+    cursor: none;
+    /*Set the size of the magnifier glass:*/
+    width: 300px;
+    height: 300px;
+    z-index: 31;
+  }
 
 /* PATH */
 #path {
