--- a/styles.css
+++ b/styles.css
@@ -112,8 +112,15 @@ footer {
     gap: 10px;
 }
 
+.datasetNote {
+    padding: 0 15px;
+    max-width: 800px;
+    font-size: 14px;
+    margin: 5px auto;
+    text-align: center;
+}
+
     /* DROP DROWN */
-        /* https://www.w3schools.com/howto/howto_js_accordion.asp */
 
 .accordion {
     background-color: unset;
