more refactoring and readme updates

--- a/styles.css
+++ b/styles.css
@@ -1,497 +1,17 @@
-:root {
-    --brick-red: #dd7e6b;
-    --noise: url("asfalt-dark.png");
-}
+/* Global */
+@import url("./styles/global.css");
 
-body {
-    margin: 0;
-    font-family:'Courier New', Courier, monospace;
-    font-size: 1.2em;
-    font-weight: 400;
-}
-button {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1em;
-}
-input {
-    font-size: 1.2em;
-}
+/* Search Box*/
+@import url("./styles/search.css");
 
-/* HEADING */
-header {
-    padding: 0 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: lightblue;
-}
-#navLinks {
-    display: flex;
-    gap: 15px;
-}
-.headerButton {
-    background-color: unset;
-    border: black solid 2px;
-    border-radius: 4px;
-    padding: 5px;
-    text-align: center;
-    width: fit-content;
-    color: black;
-    text-decoration: none;
-}
-.headerButton:hover {
-    background-color: var(--brick-red);
-    cursor: pointer;
-}
-.activeNav {
-    background-color: var(--brick-red);
-}
+/* Selected Brick */
+@import url("./styles/selectedBrick.css");
 
-/* FOOTER */
-footer {
-    background-color: lightblue;
-    padding: 15px 30px;
-    font-size: 17px;
-    min-height: 40px;
-}
+/* Scrollable Display */
+@import url("./styles/scrollable.css");
 
-/* SEARCH */
+/* List Display */
+@import url("./styles/listDisplay.css");
 
-#displayToggle {
-    margin: 15px auto 0;
-}
-
-@media (max-width: 1000px) {
-    #displayToggle {
-        display: none;
-    }
-}
-
-#searchHeader {
-    width: fit-content;
-    position: relative;
-    margin: 0 auto 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    gap: 10px;
-}
-
-#keysContainer {
-    padding-top: 2px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.keyContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-.keyBox {
-    width: 40px;
-    height: 20px;
-    border: black solid 2px;
-    background-image: var(--noise);
-}
-#redKeyBox {
-    background-color: var(--brick-red);
-}
-#greyKeyBox {
-    background-color: lightgrey;
-}
-#clearSearch {
-    background-color: #ea9f94;
-    width: fit-content;
-}
-#customizeButtons {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-.datasetNote {
-    padding: 0 15px;
-    max-width: 800px;
-    font-size: 14px;
-    margin: 5px auto;
-    text-align: center;
-}
-
-    /* DROP DROWN */
-
-.accordion {
-    background-color: unset;
-    border-radius: 3px;
-    cursor: pointer;
-    text-align: left;
-    font-size: 15px;
-    transition: 0.4s;
-}
-  
-.active, .accordion:hover, .accordion:focus {
-    background-color: var(--brick-red); 
-}
-.searchDropdown {
-    position: absolute;
-    top: 80px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 800px;
-    height: 0;
-    overflow: hidden;
-    padding: 5px 15px;
-    margin: auto;
-    transition: all 0.4s ease-out;
-}
-
-#searchContainer {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 20px;
-    margin: 10px auto;
-    width: fit-content;
-    max-width: 90vw;
-    background-color: lightgrey;
-    padding: 15px;
-}
-#sectionSearchContainer {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    text-align: center;
-}
-#sectionSearchContainer > span {
-    width: 100%;
-    text-align: left;
-}
-#sectionSearchButtons {
-    margin-top: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 15px;
-}
-#submitSearch {
-    margin-left: 5px;
-    margin-top: 5px;
-}
-#nameSearchContainer {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-}
-
-/* SELECTED BRICK */
-#selectedBrickPageCover {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    display: none;
-    top: 0;
-    left: 0;
-    background-color: #bbbbbbcc;
-    z-index: 4;
-}
-#selectedBrickContainer {
-    background-color: #ddd;
-    border: black solid 2px;
-    position: fixed;
-    z-index: 1;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px 50px;
-}
-#selectedBrick {
-    margin-top: 10px;
-    width: 400px;
-    height: 200px;
-    background-color: var(--brick-red);
-    background-image: var(--noise);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: white;
-}
-#selectedCloseButton {
-    background-color: var(--brick-red);
-}
-
-/* SCROLLABLE */
-
-#fullPathContainer {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-.scrollButtonContainer {
-    display: flex;
-    align-items: center;
-    padding: 0 5px;
-}
-.scrollButton {
-    border-radius: 50%;
-    background-color: #eee;
-    margin: 5px;
-    width: 40px;
-    height: 40px;
-    font-size: 30px;
-    border: unset;
-}
-.scrollButton:hover {
-    background-color: #ccc;
-    cursor: pointer;
-}
-#leftScroll {
-    transform: rotate(-90deg) translateX(3px);
-}
-#rightScroll {
-    transform: rotate(90deg)  translateX(-3px);
-}
-
-#scrollContainer {
-    padding: 10px 20px;
-    border: var(--brick-red) solid 10px;
-    margin: 0 auto 40px auto;
-    height: 560px;
-    width: 90vw;
-    overflow-x: scroll;
-    scrollbar-width: thin;
-    overflow-y:hidden;
-    white-space: nowrap;
-}
-
-/* PANELS */
-#panelsContainer {
-    display: inline-block;
-    margin-bottom: 10px;
-    width: fit-content;
-}
-.panel {
-    margin-right: 36px;
-}
-.panel:hover {
-    cursor: zoom-in;
-}
-#zoomImgContainer {
-    display: none;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    background-color: #000000AA;
-    z-index: 30;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: scroll;
-}
-#zoomImgs {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 30px;
-    width: 90vw;
-}
-#zoomImg {
-    width: auto;
-    object-fit: contain;    
-}
-#zoomImg:hover {
-    cursor: crosshair;
-}
-#img-magnifier-glass {
-    background-repeat: no-repeat;
-    border: 3px solid #000;
-    border-radius: 30px;
-    width: 500px;
-    height: 600px;
-    max-height: 90vh;
-    z-index: 31;
-  }
-  #closeZoom {
-    background-color: var(--brick-red);
-  }
-
-/* PATH */
-#path {
-    width: fit-content;
-
-}
-.brickRow {
-    height: 12px;
-}
-.leftShiftRow {
-    margin-left: -10px;
-}
-.rightShiftRow {
-    margin-left: 10px;
-}
-
-.brick {
-    background-image: var(--noise);
-    background-color: #d9d9d9;
-    margin-right: -2px;
-    display: inline-block;
-    border: 2px solid black;
-    width: 34.3px;
-    height: 10px;
-}
-
-.existingBrick {
-    background-color: var(--brick-red);
-    position: relative;
-    z-index: 3;
-}
-
-.clickedBrick {
-    background-color: red;
-    z-index: 5 !important;
-}
-
-/* Popup */
-
-.popupText {
-    display: none;
-    width: fit-content;
-    background-color: grey;
-    color: #fff;
-    text-align: left;
-    border-radius: 6px;
-    padding: 5px;
-    position: absolute;
-    z-index: 1;
-    bottom: 150%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.popupTextLeft {
-    left: 0%;
-    transform: translateX(0);
-}
-.popupTextRight {
-    left: 100%;
-    transform: translateX(-100%);
-}
-.popupText::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: grey transparent transparent transparent;
-}
-.popupTextLeft::after {
-    left: 10%;
-}
-.popupTextRight::after {
-    left: 90%;
-}
-.existingBrick:hover .popupText {
-    display: block;
-  }
-.existingBrick:hover {
-    cursor: pointer;
-}
-.clickedBrick {
-    background-color: red;
-}
-
-/* Static Display */
-#accessibleBricksContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.accessibleBrickContainer {
-    max-width: 90vw;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 320px;
-    text-wrap: wrap;
-}
-.accessibleBrickContainer > p {
-    margin: 0 0 0 10px;
-}
-.accessibleBrick {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: 300px;
-    max-width: 90vw;
-    height: 100px;
-    background-color: var(--brick-red);
-    background-image: var(--noise);
-    color: white;
-}
-.accessibleBrick > p {
-    margin: 0;
-    font-size: 1.3em;
-}
-#staticSearchLabel {
-    text-align: center;
-    padding: 10px;
-    font-size: 1.5em;
-}
-.brickDataText {
-    font-size: 18px;
-}
-
-/* ABOUT */
-
-#aboutPageContainer {
-    margin: 30px;
-}
-.aboutParagraph {
-    text-align: justify;
-}
-.aboutImgContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 30vw;
-    min-width: 300px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-.floatLeft {
-    float: left;
-    padding-right: 20px;
-}
-.floatRight {
-    float: right;
-    padding-left: 20px;
-}
-.aboutImg {
-    width: 100%;
-    height: auto;
-}
-.imgDescr {
-    margin: 5px;
-    font-size: 14px;
-    font-style: italic;
-}
-
-@media (max-width: 550px) {
-    h1 {
-        font-size: 25px;
-    }
-    .aboutImgContainer {
-        min-width: calc(90vw - 15px);
-        max-width: calc(90vw - 15px);
-        padding: 10px 0;
-        align-items: center;
-    }
-}
+/* About page */
+@import url("./styles/about.css");
