--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 @import url("./styles/selectedBrick.css");
 
 /* Scrollable Display */
-@import url("./styles/scrollable.css");
+@import url("./styles/scrollDisplay.css");
 
 /* List Display */
 @import url("./styles/listDisplay.css");
