more silly form edit changes

--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,4 @@
 @import url("./styles/about.css");
 
 /* Contact page */
-@import url("./styles/contact.css");
+@import url("./styles/editForm.css");
