--- a/styles/scrollDisplay.css
+++ b/styles/scrollDisplay.css
@@ -37,9 +37,15 @@
     height: 560px;
     width: 90vw;
     overflow-x: scroll;
-    scrollbar-width: thin;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
     overflow-y:hidden;
     white-space: nowrap;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#scrollContainer::-webkit-scrollbar {
+    display: none;
 }
 
 /* PANELS */
