[Update] import styles as needed, report page form error handling

--- a/react-app/styles/editForm.css
+++ b/react-app/styles/editForm.css
@@ -52,6 +52,13 @@
 .error-message {
     color: var(--brick-red);
     font-weight: bold;
+    background-color: #fdf0f2;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.error-message ul li {
+    list-style-position: inside;
 }
 
 .formSubTitle {
