--- a/react-app/styles/global.css
+++ b/react-app/styles/global.css
@@ -13,6 +13,8 @@ body {
     font-family:'Courier New', Courier, monospace;
     font-size: 1.2em;
     font-weight: 400;
+    width: 100vw;
+    overflow-x: hidden;
 }
 button {
     font-family: 'Courier New', Courier, monospace;
@@ -60,6 +62,7 @@ input {
 /* HEADING */
 header {
     padding: 0 60px;
+    max-width: calc(100vw - 40px);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -114,6 +117,7 @@ footer {
     background-color: var(--light-blue);
     padding: 40px 30px 20px 30px;
     font-size: 16px;
+    max-width: calc(100vw - 60px);
 }
 
 .footer-content {
@@ -219,4 +223,25 @@ footer {
     #hamburger-menu {
         display: block;
     }
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid var(--brick-red);
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
