--- a/react-app/styles/search.css
+++ b/react-app/styles/search.css
@@ -5,12 +5,6 @@
     margin: 15px auto 0;
 }
 
-@media (max-width: 1000px) {
-    #displayToggle {
-        display: none;
-    }
-}
-
 #searchHeader {
     width: fit-content;
     position: relative;
@@ -81,16 +75,19 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .searchDropdown {
-    position: absolute;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 800px;
+    max-width: 90vw;
     height: 0;
     overflow: hidden;
     padding: 5px 15px;
     margin: auto;
     transition: all 0.4s ease-out;
+}
+.searchDropdown.is-wide {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #searchContainer {
