[Update] new view for panels, improve selected brick, sort list view

--- a/react-app/styles/listDisplay.css
+++ b/react-app/styles/listDisplay.css
@@ -5,6 +5,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 100px;
 }
 .accessibleBrickContainer {
     max-width: 90vw;
