--- a/react-app/styles/scrollDisplay.css
+++ b/react-app/styles/scrollDisplay.css
@@ -159,7 +159,7 @@
 }
 
 #gallery-container.zoomed #gallery-stage {
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
 }
 
