--- a/react-app/styles/vertScrollDisplay.css
+++ b/react-app/styles/vertScrollDisplay.css
@@ -37,7 +37,7 @@
     border-left: unset;
     border-right: unset;
     margin: 0 auto 40px auto;
-    width: 90vw;
+    width: calc(100vw - 20px);
     height: 70vh;
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     gap: 54px;
-    margin-left: 20px;
+    margin-left: 10px;
     height: fit-content;
     padding-top: 450px;
 }
@@ -66,7 +66,11 @@
     padding: 5px;
     border: 1px solid black;
     background-color: lightyellow;
-
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+}
+.vertPanel > p {
+    margin: 5px;
 }
 .vertPanel:hover {
     cursor: zoom-in;
@@ -81,8 +85,8 @@
 }
 .vertPathGutter {
     width: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     background-color: #555;
 }
 .vertBrickColumn {
@@ -170,12 +174,17 @@
     overflow: auto;
     background-color: rgba(0,0,0,0.9);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     animation: fadeIn 0.3s;
 }
-
-.modal-content {
+.vertModalText {
+    color: #fff;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.vertModalImage {
     max-width: 90%;
     max-height: 90%;
     border-radius: 12px;
